<resources>
    <string name="app_name">BizzbullIndiaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signup">Signup</string>
    <string name="dashes">****</string>
    <string name="makemoney">Make more money!</string>
    <string name="becomeacap">Become a Captain</string>
    <string name="completeprofile">Complete your profile</string>
    <string name="menupayment">My Account</string>
    <string name="menumyrides">My Referrals</string>
    <string name="menurefer">My Offers</string>
    <string name="menuvalet">My Valet</string>
    <string name="menurewards">About us</string>
    <string name="menupowerpass">Terms &amp; Conditions</string>
    <string name="menunotify">Privacy Policy</string>
    <string name="menuclaims">Register Complaint</string>
    <string name="menucontactus">Contact us</string>
    <string name="menufollowus">Follow us</string>
    <string name="menurateus">Rate us</string>
    <string name="menusetting">Settings</string>
    <string name="menulogout">Logout</string>
    <string name="fo_home">Home</string>
    <string name="fo_status">Status</string>
    <string name="bizbullmobile">8977362436</string>
    <string name="bizbullemail">contactus@bizbullsindia.com</string>
    <string name="bizbullinfoone">BIZ BULLS is a licensing company between a Franchisor and a Franchisee. We thoroughly check both parties, analyse the project, verify its credibility, project the success ratio; Hire credible franchisees with a passion in business, responsible towards project and work for both company and franchisee growth.
    \n\n we are the industry experts of talented beings who believe in expanding and extending opportunities in the best ways. We innovate and execute the Finest Methodology for the budding Entrepreneurs to grow their thriving business to an extent as a franchisor. We enable both qualitative and quantitative approaches to make sure that, as a franchisor, you can reach the targeted audience to convince them about your business. On the other hand, we help the Franchisees take every possible step to build a business that they desire to witness. We promote Franchisors, giving utmost value to their brand, and formulate innovative methods to approach budding entrepreneurs and expand their business as per the requirement.
    \n\n
        Our vision is growing together in leaps and bounds, offering the most edge-cutting upgraded service to the desired future entrepreneurs.
    </string>
    <string name="c_statustracking">Status Tracking</string>
    <string name="c_kyc">KYC</string>
    <string name="c_setup">Setup</string>
    <string name="c_agreement">Agreement</string>
    <string name="c_license">License</string>
    <string name="c_download"><u>Download</u></string>
    <string name="c_viewdetail"><u>View Details</u></string>
    <string name="c_viewcdetail">View Contact Details</string>
    <string name="c_licensensehasbeen">License has been issued</string>
    <string name="f_submit">Submit</string>
    <string name="f_registration">Franchise Registration</string>
    <string name="f_personaldetail">Personal Details</string>
    <string name="f_healthdetail">Health Details</string>
    <string name="f_exinterest">Expression of Interest in BIZ BULLS Franchise</string>
    <string name="f_checklist">Checklist for franchisee understanding</string>
    <string name="f_academic">Academic / Education Details</string>
    <string name="f_socialidentity">Social Identity Details</string>
    <string name="f_bankacct">Bank Account Details (for financial processes with us)</string>
    <string name="f_familydetail">Family Details</string>
    <string name="f_childdetail">Children Details (If any)</string>
    <string name="f_personalref">Personal References (If any) – other than family</string>
    <string name="f_attachmentenclosed">Attachments to be enclosed, with this form</string>
    <string name="f_auth">Authorization</string>
    <string name="ct_fullname">Full Name</string>
    <string name="ct_writefullname">Full name</string>
    <string name="ct_fathername">Father’s Name</string>
    <string name="ct_writefathername">Father’s name</string>
    <string name="ct_mothername">Mother’s Maiden name</string>
    <string name="ct_writemothername">Enter mother’s Maiden name</string>
    <string name="ct_dob">Date of Birth</string>
    <string name="ct_sex">Sex</string>
    <string name="ct_male">Male</string>
    <string name="ct_female">Female</string>
    <string name="ct_placeofbirth">Place of Birth</string>
    <string name="ct_writeplaceofbirth">Place of birth</string>
    <string name="ct_mothertongue">Mother Tongue</string>
    <string name="ct_writemothertongue">Mother tongue</string>
    <string name="ct_maritalstatus">Marital Status</string>
    <string name="ct_single">Single</string>
    <string name="ct_married">Married</string>
    <string name="ct_separated">Separated</string>
    <string name="ct_widowed">Widowed</string>
    <string name="ct_contactnumber">Contact Number</string>
    <string name="ct_writecontactnumber">Contact number</string>
    <string name="ct_altnumber">Alternate Number</string>
    <string name="ct_writealtnumber">Alternate number</string>
    <string name="ct_whatnumber">Whatsapp Number</string>
    <string name="ct_writewhatsupnumber">Whatsapp number</string>
    <string name="ct_emailid">Email ID</string>
    <string name="ct_writeemail">Email id</string>
    <string name="ct_permenentadrs">Permanent Address</string>
    <string name="ct_writepermenentadrs">Residential address</string>
    <string name="ct_presentadrs">Present Address</string>
    <string name="ct_writepresentadrs">Write a present address</string>
    <string name="ct_accommodationtype">Accommodation Type</string>
    <string name="ct_writeaccommodationtype">Rent/own/Hostel/Bachelor/</string>
    <string name="ct_accommodationsince">Accommodation Since</string>
    <string name="ct_writeaccommodationsince">Accommodation since</string>
    <string name="ct_proofsub">Proof submitted</string>
    <string name="ct_writeproofsub">Proof submitted</string>
    <string name="ct_emergencycontact">Emergency Contact Number </string>
    <string name="ct_writeemergencycontact">Emergency contact number </string>
    <string name="ct_dcnumber">Document Number</string>
    <string name="ct_writedcnumber">Document number</string>
    <string name="ct_birthidentificationmarks">Birth Identification Marks</string>
    <string name="ct_onemarks">1)</string>
    <string name="ct_twomarks">2)</string>
    <string name="ct_handuse">Hand Use</string>
    <string name="ct_heightin">Height in Cms</string>
    <string name="ct_weightin">Weight in Kgs</string>
    <string name="ct_bloodgroup">Blood Group </string>
    <string name="ct_willingtodonate">Willing to donate</string>
    <string name="ct_ifwillingtodonate">Willing to donate? If yes then write here</string>
    <string name="ct_ifyeshandicappy">Physically handicapped? If yes then write here</string>
    <string name="ct_ifyessurgeries">Any Surgeries/Treatments Undergone? If yes then write here</string>
    <string name="ct_ifyeshelathissues">Any other health issues? If yes then write here</string>
    <string name="ct_ifyesunhealthyhabits">Any unhealthy Habits? If yes then write here</string>
    <string name="ct_phsicallyhandi">Physically Handicapped</string>
    <string name="ct_typeofph">Type of PH</string>
    <string name="ct_surgeries">Surgeries/Treatments Undergone</string>
    <string name="ct_typeofsurgery">Type of Surgery</string>
    <string name="ct_anyhealthissue">Any other Health Issues</string>
    <string name="ct_pleasemention">Please Mention</string>
    <string name="ct_anyunhealthyhabits">Any unhealthy Habits</string>
    <string name="ct_interestedprojectname">Interested Project Name</string>
    <string name="ct_interestedprojectvalue">BIZ BULLS India</string>
    <string name="ct_industryprojectname">Industry of Project</string>
    <string name="ct_industryprojectvalue">Business Franchising</string>
    <string name="ct_locatinterest">Location of Interest</string>
    <string name="ct_locatinterestvalue">Location of Interest (District or State Name)</string>
    <string name="ct_financeassit">Write a Financial Assistance</string>
    <string name="ct_financeassitvalue">Full Investment / Partial Loan / Full Loan / Seeking Investor</string>
    <string name="ct_registrationfee">Registration Fee</string>
    <string name="ct_registrationfeevalue">Rs. 25,000/- (Non-refundable &amp; will be deducted from total investment amount)</string>
    <string name="ct_franchiseplaningfor">Write a Franchisee Planning for</string>
    <string name="ct_franchiseplaningforvalue">Self / Other – (Please mention)</string>
    <string name="ct_franchiseplaningas">Write a Franchisee Planning as</string>
    <string name="ct_franchiseplaningavalue">Sole Ownership / Partnership (Separate form to be attached)</string>
    <string name="ct_businessplacetype">Write a Business Place Type (Owned / Leased / Rented)</string>
    <string name="ct_businessplacetypevalue">Owned / Leased / Rented</string>
    <string name="ct_buzplacesize">Business Place Size</string>
    <string name="ct_buzplacesizevalue">Area of Place in Sq.ft</string>
    <string name="ct_aadharcardnumber">Aadhaar Card Number</string>
    <string name="ct_writeaadharcardnumber">Aadhaar card number</string>
    <string name="ct_drivinglicense">Driving Licence No</string>
    <string name="ct_writedrivinglicense">Driving license no</string>
    <string name="ct_pancardno">PAN Card No</string>
    <string name="ct_writepancardno">Pan card no</string>
    <string name="ct_passportno">Passport No.</string>
    <string name="ct_writepassportno">Passport no</string>
    <string name="ct_voterno">Voter Card No</string>
    <string name="ct_writevoterno">Voter card no</string>
    <string name="ct_rationno">Ration Card No</string>
    <string name="ct_writerationno">Ration card no</string>
    <string name="ct_bankname">Bank Name</string>
    <string name="ct_writebankname">Bank name</string>
    <string name="ct_bankactname">Name (as in account)</string>
    <string name="ct_writebankactname">Name </string>
    <string name="ct_acctnumb">Account Number</string>
    <string name="ct_writeacctnumb">Account number</string>
    <string name="ct_branch">Branch</string>
    <string name="ct_writebranch">Branch name</string>
    <string name="ct_ifsccode">IFSC Code</string>
    <string name="ct_writeifsccode">Ifsc code</string>
    <string name="ct_accounttype">Type</string>
    <string name="ct_ichilddetail">Child Detail</string>
    <string name="ct_childname">Name</string>
    <string name="ct_childage">Age</string>
    <string name="ct_childsex">Sex</string>
    <string name="ct_perrefwriteaname">Name</string>
    <string name="ct_perrefwritearelation">Relation</string>
    <string name="ct_perrefage">Age</string>
    <string name="ct_perrefoccupation">Occupation</string>
    <string name="ct_perrefnumber">Contact Number</string>
    <string name="ct_perrefwriteaddress">Address</string>
    <string name="ct_perrefmonthlyincome">Monthly Income</string>
    <string name="ct_perrefeducation">Education</string>
    <string name="ct_ifamilydetail">Family Detail</string>
    <string name="ct_writeinstitute">Institution Name</string>
    <string name="ct_writeboard">Board/university</string>
</resources>